@@ -1,4 +1,3 @@
 -Dguice_custom_class_loading=CHILD
 -XX:+EnableDynamicAgentLoading
 -Xshare:off
---sun-misc-unsafe-memory-access=allow
